docs: Documentação finalizada
